# VehicleUI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ui/BottomBar/: BottomBar.qml
ui/RightScreen/: RightScreen.qml
